--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -10,12 +10,12 @@
     <ImageView
         android:id="@+id/imageView3"
         android:layout_width="match_parent"
-        android:layout_height="277dp"
+        android:layout_height="150dp"
+        android:importantForAccessibility="no"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/greenn"
-        android:importantForAccessibility="no" />
+        app:srcCompat="@drawable/greenn" />
 
     <TextView
         android:id="@+id/loginTv"
@@ -33,7 +33,7 @@
     <LinearLayout
         android:id="@+id/linearLayout"
         android:layout_width="0dp"
-        android:layout_height="550dp"
+        android:layout_height="0dp"
         android:background="@drawable/background_bottom"
         android:gravity="center_horizontal"
         android:orientation="vertical"
@@ -54,25 +54,23 @@
 
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/emailTb"
+            style="@style/InputBoxes"
             android:layout_width="320dp"
             android:layout_height="60dp"
             android:layout_gravity="center_horizontal"
             android:layout_marginTop="8dp"
             android:layout_marginBottom="24dp"
-            android:textColorHint="@color/green"
             app:boxBackgroundColor="@color/white"
             app:boxBackgroundMode="outline"
-            app:boxStrokeColor="@color/green"
-            app:hintTextColor="@color/green">
+            android:hint="jones@gmail.com">
 
             <com.google.android.material.textfield.TextInputEditText
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:hint="@string/email_example"
                 android:inputType="textEmailAddress"
-                android:padding="5dp"
-                android:textColor="@color/green"
-                android:textSize="20sp" />
+                android:textSize="20sp"
+                android:padding="5dp"/>
+
         </com.google.android.material.textfield.TextInputLayout>
 
         <TextView
@@ -86,14 +84,13 @@
 
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/passwordTb"
+            style="@style/InputBoxes"
             android:layout_width="320dp"
             android:layout_height="60dp"
             android:layout_gravity="center_horizontal"
             android:layout_marginTop="8dp"
-            android:layout_marginBottom="5dp"
-            app:boxBackgroundColor="@color/white"
+            android:layout_marginBottom="24dp"
             app:boxBackgroundMode="outline"
-            app:boxStrokeColor="@color/green"
             app:passwordToggleEnabled="true"
             app:passwordToggleTint="@color/green"
             app:passwordToggleTintMode="src_in">
@@ -103,7 +100,36 @@
                 android:layout_height="match_parent"
                 android:inputType="textPassword"
                 android:padding="5dp"
-                android:textColor="@color/green"
+                android:textSize="20sp" />
+        </com.google.android.material.textfield.TextInputLayout>
+
+        <TextView
+            android:id="@+id/textView7"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Confirm Password"
+            android:textColor="@color/green"
+            android:textSize="20sp"
+            android:textStyle="bold" />
+
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/confirmPasswordTb"
+            style="@style/InputBoxes"
+            android:layout_width="320dp"
+            android:layout_height="60dp"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="8dp"
+            android:layout_marginBottom="24dp"
+            app:boxBackgroundMode="outline"
+            app:passwordToggleEnabled="true"
+            app:passwordToggleTint="@color/green"
+            app:passwordToggleTintMode="src_in">
+
+            <com.google.android.material.textfield.TextInputEditText
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:inputType="textPassword"
+                android:padding="5dp"
                 android:textSize="20sp" />
         </com.google.android.material.textfield.TextInputLayout>
 
@@ -112,7 +138,6 @@
             style="@style/Widget.Material3.Button.TextButton"
             android:layout_width="320dp"
             android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
             android:layout_marginTop="5dp"
             android:padding="0dp"
             android:text="Already have an account?"
