--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -1,164 +1,112 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/greenn"
+    android:fillViewport="true"
     tools:context=".SignUp">
 
-    <ImageView
-        android:id="@+id/imageView3"
-        android:layout_width="match_parent"
-        android:layout_height="150dp"
-        android:importantForAccessibility="no"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/greenn" />
-
-    <TextView
-        android:id="@+id/loginTv"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Sign Up"
-        android:textColor="#ffffff"
-        android:textSize="48sp"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
-        app:layout_constraintEnd_toEndOf="@+id/imageView3"
-        app:layout_constraintStart_toStartOf="@+id/imageView3"
-        app:layout_constraintTop_toTopOf="@+id/imageView3" />
-
     <LinearLayout
-        android:id="@+id/linearLayout"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:background="@drawable/background_bottom"
-        android:gravity="center_horizontal"
-        android:orientation="vertical"
-        android:padding="32dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/imageView3">
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:orientation="vertical">
 
+        <!--Heading-->
         <TextView
-            android:id="@+id/passwordTv"
+            android:id="@+id/signupTv"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Email"
-            android:textColor="@color/green"
-            android:textSize="20sp"
+            android:layout_marginBottom="50dp"
+            android:text="@string/sign_up"
+            android:textAlignment="center"
+            android:textColor="@color/my_app_on_primary"
+            android:textSize="48sp"
             android:textStyle="bold" />
 
+        <!--Email textbox-->
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/emailTb"
-            style="@style/InputBoxes"
-            android:layout_width="320dp"
-            android:layout_height="60dp"
-            android:layout_gravity="center_horizontal"
-            android:layout_marginTop="8dp"
-            android:layout_marginBottom="24dp"
-            app:boxBackgroundColor="@color/white"
-            app:boxBackgroundMode="outline"
-            android:hint="jones@gmail.com">
+            android:layout_width="300dp"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="10dp"
+            android:hint="@string/email"
+            app:boxBackgroundColor="@color/my_app_on_surface"
+            app:boxBackgroundMode="filled">
 
             <com.google.android.material.textfield.TextInputEditText
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:inputType="textEmailAddress"
-                android:textSize="20sp"
-                android:padding="5dp"/>
+                android:layout_height="wrap_content"
+                android:textColor="@color/my_app_primary_dark" />
 
         </com.google.android.material.textfield.TextInputLayout>
 
-        <TextView
-            android:id="@+id/textView6"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Password"
-            android:textColor="@color/green"
-            android:textSize="20sp"
-            android:textStyle="bold" />
-
+        <!--Password textbox-->
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/passwordTb"
-            style="@style/InputBoxes"
-            android:layout_width="320dp"
-            android:layout_height="60dp"
-            android:layout_gravity="center_horizontal"
-            android:layout_marginTop="8dp"
-            android:layout_marginBottom="24dp"
-            app:boxBackgroundMode="outline"
-            app:passwordToggleEnabled="true"
-            app:passwordToggleTint="@color/green"
-            app:passwordToggleTintMode="src_in">
+            android:layout_width="300dp"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="10dp"
+            android:hint="@string/password"
+            app:boxBackgroundColor="@color/my_app_on_surface"
+            app:boxBackgroundMode="filled"
+            app:boxCollapsedPaddingTop="0dp"
+            app:endIconMode="password_toggle"
+            app:passwordToggleTint="@color/my_app_primary">
 
             <com.google.android.material.textfield.TextInputEditText
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
                 android:inputType="textPassword"
-                android:padding="5dp"
-                android:textSize="20sp" />
+                android:textColor="@color/my_app_primary_dark" />
+
         </com.google.android.material.textfield.TextInputLayout>
 
-        <TextView
-            android:id="@+id/textView7"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Confirm Password"
-            android:textColor="@color/green"
-            android:textSize="20sp"
-            android:textStyle="bold" />
-
+        <!--Confirm password textbox-->
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/confirmPasswordTb"
-            style="@style/InputBoxes"
-            android:layout_width="320dp"
-            android:layout_height="60dp"
-            android:layout_gravity="center_horizontal"
-            android:layout_marginTop="8dp"
-            android:layout_marginBottom="24dp"
-            app:boxBackgroundMode="outline"
-            app:passwordToggleEnabled="true"
-            app:passwordToggleTint="@color/green"
-            app:passwordToggleTintMode="src_in">
+            android:layout_width="300dp"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="10dp"
+            android:hint="@string/confirm_password"
+            app:boxBackgroundColor="@color/my_app_on_surface"
+            app:boxBackgroundMode="filled"
+            app:endIconMode="password_toggle"
+            app:passwordToggleTint="@color/my_app_primary">
 
             <com.google.android.material.textfield.TextInputEditText
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
                 android:inputType="textPassword"
-                android:padding="5dp"
-                android:textSize="20sp" />
+                android:textColor="@color/my_app_primary_dark" />
+
         </com.google.android.material.textfield.TextInputLayout>
 
+        <!--Sign in / Log in button-->
         <Button
             android:id="@+id/loginBtn"
             style="@style/Widget.Material3.Button.TextButton"
-            android:layout_width="320dp"
+            android:layout_width="300dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="5dp"
-            android:padding="0dp"
-            android:text="Already have an account?"
+            android:layout_marginBottom="20dp"
+            android:text="@string/don_t_have_an_account"
             android:textAlignment="viewStart"
-            android:textColor="@color/green"
+            android:textColor="@color/my_app_on_primary"
             android:textSize="16sp"
             android:textStyle="bold" />
 
+        <!--Register / Sign up button-->
         <Button
             android:id="@+id/signUpBtn"
-            android:layout_width="320dp"
+            style="@android:style/Widget.Material.Button"
+            android:layout_width="300dp"
             android:layout_height="50dp"
             android:layout_gravity="center_horizontal"
-            android:layout_marginTop="15dp"
-            android:backgroundTint="@color/green"
-            android:text="Sign Up"
-            android:textColor="#ffffff"
-            android:textSize="16sp"
-            app:cornerRadius="50dp" />
-
+            android:elevation="5dp"
+            android:text="@string/sign_up"
+            android:textSize="16sp" />
     </LinearLayout>
-
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+</ScrollView>
