--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -1,24 +1,29 @@
-<resources xmlns:tools="http://schemas.android.com/tools">
-    <!-- Base application theme. -->
-    <style name="Theme.WilApp" parent="Theme.MaterialComponents.DayNight.NoActionBar">
-        <!-- Primary brand color. -->
-        <!--<item name="colorPrimary">@color/purple_200</item>
-        <item name="colorPrimaryVariant">@color/purple_700</item>
-        <item name="colorOnPrimary">@color/black</item>
-        &lt;!&ndash; Secondary brand color. &ndash;&gt;
-        <item name="colorSecondary">@color/teal_200</item>
-        <item name="colorSecondaryVariant">@color/teal_200</item>
-        <item name="colorOnSecondary">@color/black</item>-->
+<?xml version="1.0" encoding="utf-8"?>
+<resources>
+    <!-- Base application theme for dark mode (Material Design) -->
+    <style name="AppTheme.Dark" parent="Theme.MaterialComponents">
+        <!-- Primary branding color for the app in dark mode -->
+        <item name="colorPrimary">@color/my_app_primary</item>
 
-        <item name="colorPrimary">@color/green</item>
-        <item name="colorPrimaryVariant">@color/green</item>
-        <item name="colorOnPrimary">@color/white</item>
-        <!-- Secondary brand color. -->
-        <item name="colorSecondary">@color/green</item>
-        <item name="colorSecondaryVariant">@color/green</item>
-        <item name="colorOnSecondary">@color/black</item>
-        <!-- Status bar color. -->
-        <item name="android:statusBarColor">@color/green</item>
-        <!-- Customize your theme here. -->
+        <!-- Darker variant of the primary color for dark mode -->
+        <item name="colorPrimaryDark">@color/my_app_primary_dark</item>
+
+        <!-- Secondary color for the app in dark mode -->
+        <item name="colorSecondary">@color/my_app_secondary</item>
+
+        <!-- Error color for the app in dark mode -->
+        <item name="colorError">@color/my_app_error</item>
+
+        <!-- Text color for the primary background content in dark mode -->
+        <item name="android:textColorPrimary">@color/my_app_on_primary</item>
+
+        <!-- Text color for the secondary background content in dark mode -->
+        <item name="android:textColorSecondary">@color/my_app_on_secondary</item>
+
+        <!-- Background color for the app in dark mode -->
+        <item name="android:windowBackground">@color/my_app_surface</item>
+
+        <!-- Background color for the action bar in dark mode -->
+        <item name="android:colorBackground">@color/my_app_primary</item>
     </style>
 </resources>
