--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,16 +1,29 @@
-<resources xmlns:tools="http://schemas.android.com/tools">
-    <!-- Base application theme. -->
-    <style name="Theme.WilApp" parent="Theme.MaterialComponents.DayNight.NoActionBar">
-        <!-- Primary brand color. -->
-        <item name="colorPrimary">@color/green</item>
-        <item name="colorPrimaryVariant">@color/green</item>
-        <item name="colorOnPrimary">@color/white</item>
-        <!-- Secondary brand color. -->
-        <item name="colorSecondary">@color/green</item>
-        <item name="colorSecondaryVariant">@color/green</item>
-        <item name="colorOnSecondary">@color/black</item>
-        <!-- Status bar color. -->
-        <item name="android:statusBarColor">@color/green</item>
-        <!-- Customize your theme here. -->
+<?xml version="1.0" encoding="utf-8"?>
+<resources>
+    <!-- Base application theme for light mode (Material Design) -->
+    <style name="AppTheme" parent="Theme.Material3.Light.NoActionBar">
+        <!-- Primary branding color for the app -->
+        <item name="colorPrimary">@color/my_app_primary</item>
+
+        <!-- Darker variant of the primary color -->
+        <item name="colorPrimaryDark">@color/my_app_primary_dark</item>
+
+        <!-- Secondary color for the app -->
+        <item name="colorSecondary">@color/my_app_secondary</item>
+
+        <!-- Error color for the app -->
+        <item name="colorError">@color/my_app_error</item>
+
+        <!-- Text color for the primary background content -->
+        <item name="android:textColorPrimary">@color/my_app_on_primary</item>
+
+        <!-- Text color for the secondary background content -->
+        <item name="android:textColorSecondary">@color/my_app_on_secondary</item>
+
+        <!-- Background color for the app -->
+        <item name="android:windowBackground">@android:color/white</item>
+
+        <!-- Background color for the action bar -->
+        <item name="android:colorBackground">@color/my_app_primary</item>
     </style>
 </resources>
