--- a/app/src/main/res/layout/activity_find_learner.xml
+++ b/app/src/main/res/layout/activity_find_learner.xml
@@ -5,90 +5,74 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/greenn"
-    android:backgroundTint="#54000000"
     android:backgroundTintMode="src_over"
-    android:gravity="center_vertical"
+    android:gravity="center"
     android:orientation="vertical"
     android:padding="20dp"
     tools:context=".FindLearnerActivity">
 
-    <LinearLayout
+    <TextView
+        android:id="@+id/pageHeading"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:layout_marginTop="20dp"
+        android:gravity="center"
+        android:text="@string/find_learner"
+        android:textColor="@color/my_app_on_primary"
+        android:textSize="48sp"
+        android:textStyle="bold" />
 
-        <TextView
-            android:id="@+id/pageHeading"
+    <TextView
+        android:id="@+id/instructionLabel"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:layout_marginBottom="5dp"
+        android:gravity="center"
+        android:text="Enter learner ID number below"
+        android:textColor="@color/my_app_on_primary"
+        android:textSize="20sp" />
+
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/idNumber"
+        android:layout_width="300dp"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="10dp"
+        android:hint="ID Number"
+        app:boxBackgroundColor="@color/my_app_on_surface"
+        app:boxBackgroundMode="filled"
+        app:helperTextTextColor="@color/my_app_primary_dark">
+
+        <com.google.android.material.textfield.TextInputEditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
-            android:gravity="center"
-            android:text="Find Learner"
-            android:textColor="@color/white"
-            android:textSize="34sp" />
+            android:inputType="number"
+            android:textAlignment="center"
+            android:textColor="@color/my_app_primary_dark" />
 
-        <TextView
-            android:id="@+id/instructionLabel"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
-            android:layout_marginBottom="5dp"
-            android:gravity="center"
-            android:text="Enter learner ID number below"
-            android:textColor="@color/white"
-            android:textSize="16sp" />
+    </com.google.android.material.textfield.TextInputLayout>
 
-        <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/idNumber"
-            style="@style/InputBoxes"
-            android:layout_width="300dp"
-            android:layout_height="50dp"
-            android:layout_gravity="center_horizontal|center_vertical"
-            app:endIconTint="@color/green"
-            app:startIconTint="@color/green">
+    <Button
+        android:id="@+id/searchBtn"
+        android:layout_width="250dp"
+        android:layout_height="50dp"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginTop="20dp"
+        android:elevation="5dp"
+        android:text="Search" />
 
-            <com.google.android.material.textfield.TextInputEditText
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_gravity="center_horizontal|center_vertical"
-                android:gravity="center_horizontal|center_vertical"
-                android:inputType="number"
-                android:paddingTop="5dp"
-                android:paddingBottom="5dp"
-                android:textAlignment="center"
-                android:textColor="@color/green" />
-
-        </com.google.android.material.textfield.TextInputLayout>
-
-        <Button
-            android:id="@+id/searchBtn"
-            android:layout_width="250dp"
-            android:layout_height="50dp"
-            android:layout_gravity="center_horizontal"
-            android:layout_marginTop="20dp"
-            android:backgroundTint="@color/green"
-            android:backgroundTintMode="src_over"
-            android:elevation="6dp"
-            android:text="Search"
-            android:textColor="@color/white"
-            android:textStyle="bold"
-            app:cornerRadius="10dp"
-            app:strokeColor="@color/white"
-            app:strokeWidth="0.5dp" />
-
-        <TextView
-            android:id="@+id/resultsLabel_tv"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
-            android:text="Results:"
-            android:textColor="@color/white" />
-
-    </LinearLayout>
-
+    <TextView
+        android:id="@+id/resultsLabel_tv"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:text="Results:"
+        android:textColor="@color/my_app_on_primary"
+        android:textSize="16sp" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/learnerInfoRv"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
+
 </LinearLayout>
