--- a/app/src/main/res/layout/learner_info_card_layout.xml
+++ b/app/src/main/res/layout/learner_info_card_layout.xml
@@ -5,7 +5,6 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_margin="10dp"
-    app:cardBackgroundColor="@color/white"
     app:cardCornerRadius="10dp"
     app:cardElevation="5dp"
     app:contentPadding="10dp">
@@ -14,31 +13,49 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@null"
-        android:orientation="vertical">
+        android:gravity="center|center_horizontal"
+        android:orientation="horizontal">
 
-        <TextView
-            android:id="@+id/nameText"
+        <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Name: Cibrian Hofsta"
-            android:textColor="@color/green" />
+            android:src="@drawable/person_ic" />
 
-        <TextView
-            android:id="@+id/ageText"
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_gravity="start"
-            android:layout_marginTop="5dp"
-            android:text="Age: 22"
-            android:textColor="@color/black" />
+            android:background="@null"
+            android:orientation="vertical">
 
-        <TextView
-            android:id="@+id/idText"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="5dp"
-            android:text="ID number: 0101035298088"
-            android:textColor="@color/green" />
+            <TextView
+                android:id="@+id/nameText"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Name: Cibrian Hofsta"
+                android:textColor="@color/my_app_primary_dark"
+                android:textSize="16sp" />
+
+            <TextView
+                android:id="@+id/ageText"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="start"
+                android:layout_marginTop="5dp"
+                android:text="Age: 22"
+                android:textColor="@color/my_app_primary_dark"
+                android:textSize="16sp" />
+
+            <TextView
+                android:id="@+id/idText"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="5dp"
+                android:text="ID number: 0101035298088"
+                android:textColor="@color/my_app_primary_dark"
+                android:textSize="16sp" />
+
+        </LinearLayout>
+
 
     </LinearLayout>
 
